Revert "Set max box width to ensure better readability"
This reverts commit 7f905357d73c21041a67662c482a0970754cf7a9.
Fixes asymmetrical display of frontpage boxes.

--- a/css/style.scss
+++ b/css/style.scss
@@ -435,7 +435,6 @@
 		margin: 0 0 $size-element-margin 0;
 		padding: $box-padding;
 		width: 100%;
-		max-width: 768px;
 		display: inline-block;
 
 		> :last-child {
